--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.activemq.broker-url=tcp://localhost:61616
+#####################################################
+spring.activemq.broker-url=tcp://localhost:61617
+#####################################################
 
+#####################################################
+spring.activemq.in-memory=true
+spring.activemq.pool.enabled=false
+#####################################################
