--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.activemq.broker-url=tcp://localhost:61617
 spring.activemq.in-memory=true
 spring.activemq.pool.enabled=false
 #####################################################
+
+
+#####################################################
+active-mq.topic = TEST_TOPIC
+#####################################################
