activemq topic/queue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #####################################################
 spring.activemq.broker-url=tcp://localhost:61617
+spring.activemq.user=admin
+spring.activemq.password=admin
 #####################################################
 
 #####################################################
@@ -10,4 +12,6 @@ spring.activemq.pool.enabled=false
 
 #####################################################
 active-mq.topic = TEST_TOPIC
+
+active-mq.queue.name = TEST_QUEUE
 #####################################################
